# Robotics

Lab1/ex01/: commands.txt
Lab2/ex03/aleisle/: setup.cfg
Lab2/ex04/: colcon_build.txt
Lab2/ex05/: rosnode_info.txt
Lab2/ex08/: rqt_console.csv
Lab2/ex09/full_name/: CMakeLists.txt
ex01/robot_description/: package.xml
ex01/robot_description/launch/: robot_display.launch.py
ex01/robot_description/urdf/: robot.urdf
lab1/ex01/: commands.txt
lab2/ex01/: bashrc
lab2/ex03/aleisle/: package.xml  setup.py
lab2/ex05/: rosnode_list.txt
lab2/ex06/: cmd_vel.txt
lab2/ex09/full_name/: package.xml
lab2/ex10/text_to_cmd_vel/: package.xml  setup.py
lab3/ex01/: commands.txt
lab3/ex01/name_interface/: CMakeLists.txt  package.xml
lab3/ex01/service_full_name/: package.xml  setup.py
lab3/ex02/: commands.txt
lab3/ex02/action_turtle_commands/: package.xml  setup.py
lab3/ex02/action_turtle_interface/: CMakeLists.txt  package.xml
lab3/ex03/: commands.txt  pose_speed_x1.yaml  pose_speed_x2.yaml
lab3/ex03/turtle_cmd_vel.mcap/: metadata.yaml  (+1 more)
lab3/ex04/: doctor.txt
lab3/ex05/: commands.txt
lab4/ex01/: commands.txt  last_transform.txt  transform.txt
lab4/ex02/: carrot.rviz  commands.txt
lab4/ex03/: commands.txt
lab5/ex02/: commands.txt
lab5/ex03/: commands.txt
lab5/ex03/diff_drive_robot/: CMakeLists.txt  package.xml
lab5/ex03/diff_drive_robot/launch/: robot_gazebo.launch.py
lab5/ex03/diff_drive_robot/rviz/: diff_drive.rviz
lab5/ex03/diff_drive_robot/urdf/: CMakeLists.txt  robot.gazebo.xacro  robot.urdf.xacro
lab5/ex04/: commands.txt
(+83 files in other folders)
